# tools

./: .gitignore  AGENTS.md  CLAUDE.md  LSP_SETUP.md  README.md  pyproject.toml  report.html  requirements.txt
.github/workflows/: quality.yml
agent_history_analyzer/: __init__.py  analyzer.py  constants.py  loader.py  main.py  models.py  reporter.py  templates.py  util_init.py
llm_trace_analyzer/: __init__.py  analyzer.py  constants.py  loader.py  main.py  models.py  parser.py  reporter.py  templates.py  tool_errors.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_concurrent_telemetry.py  test_integration.py  test_loader.py  test_main.py  test_models.py  test_parser.py  test_reporter.py  test_tool_errors.py  trace_factory.py
tools/: analyze_agent_history.py
