[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-tools"
version = "0.2.0"
description = "Python tools collection for various utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["python", "tools", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-tools"
Repository = "https://github.com/yourusername/python-tools"

[project.scripts]
agent-history-analyzer = "agent_history_analyzer.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_history_analyzer*"]

# LSP Configuration - Pyright (推荐用于 VS Code + Pylance)
[tool.pyright]
include = ["tools"]
exclude = ["**/node_modules", "**/__pycache__", "venv", ".venv"]
venvPath = "."
venv = "venv"
pythonVersion = "3.8"
pythonPlatform = "Windows"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

# LSP Configuration - PyLSP (Python Language Server Protocol)
[tool.pylsp]
configurationSources = ["pyflakes", "mccabe", "pycodestyle"]

[tool.pylsp.plugins.pyflakes]
enabled = true

[tool.pylsp.plugins.mccabe]
enabled = true
threshold = 15

[tool.pylsp.plugins.pycodestyle]
enabled = true
ignore = ["E501", "W503"]
maxLineLength = 100

[tool.pylsp.plugins.pylint]
enabled = false

[tool.pylsp.plugins.rope_completion]
enabled = true

[tool.pylsp.plugins.jedi_completion]
enabled = true
fuzzy = true

# Formatting - Black
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

# Linting - Ruff
[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Type checking - MyPy
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

# Testing - Pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]